# prosjektoppgave

./: .gitignore  LICENSE  README.md
blender_models/: rand-part1.blend  rand-part1.dae
calibrate-blender-camera/focal-len-36/: calibrate-opencv.py  camera-matrix-4x4.csv  camera-matrix.csv  checkerboard_dim.csv  inv-camera-matrix-4x4.csv  inv-camera-matrix.csv  scene-calibrate.blend  scene-calibrate.blend1
helper-tools/: rot-mat-to-axis-angle.py
laser-scanning-stereo/python/: proj-laser-pattern.py
laser-scanning/python/: blender-scan.py  write-blender-matrices.py
stereo_vision/: blender_script.py  stereo_reconstruction.py
stereo_vision/city-monkey-stereo/: essential-matrix.csv  opencv-stereo-matching.py  render-and-get-cam-intr.py  stereo-setup.blend
stereo_vision/city-monkey-stereo2/: R-C2-C1.csv  render-and-get-cam-intr.py  t-C2-C1-C2.csv
stereo_vision/matlab/: stereoMatching.m
stereo_vision/python/: render-stereo-images.py  write-blender-matrices.py
stereo_vision/testing/: stereo-setup.blend1
structured_light/: .gitignore
structured_light/cpp/depth-img-to-proj-x/: CMakeLists.txt  depthImgToProjX.cpp
structured_light/dragly_testing/: .gitignore  average.py  create_patterns.py  generate-projector-x.py  load_png.py  make_binary.py  project_light_and_render.py  reconstruct_3d_cam_mat.py  reconstruct_3d_vec.py  test_glm.py
structured_light/dragly_testing/cpp/: CMakeLists.txt  generateDepthImg.cpp  generatePointCloud.cpp
structured_light/dragly_testing/cpp/depth-img-to-proj-x/: depthImgToProjX.cpp  depthImgToProjX_double.cpp  x-val-proj-gt
structured_light/python/: .write-matrices-csv.py.swp  create-patterns.py  generate-proj-x-exr.py  (+4 more)
test_pointcloud/: make_pointcloud_from_image.py
(+345 files in other folders)
